[package]
name = "zmq-sys-mobile"
version = "0.1.0"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
    "redmike7@gmail.com",
]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the zeromq library"
keywords = ["ffi", "bindings"]
repository = "https://github.com/mikelodder7/rust-zmq-mobile"
build = "build.rs"
links = "zmq"

[dependencies]
libc = "0.2.15"
